--- a/vn2000-api.html
+++ b/vn2000-api.html
@@ -722,68 +722,39 @@
                             <select id="wgs_province" onchange="updateMeridian('wgs')" required>
                                 <option value="">-- Chọn tỉnh/thành phố --</option>
                                 <option value="104.75">An Giang</option>
-                                <option value="107.75">Bà Rịa - Vũng Tàu</option>
-                                <option value="105.00">Bạc Liêu</option>
-                                <option value="107.00">Bắc Giang</option>
-                                <option value="106.50">Bắc Kạn</option>
-                                <option value="105.50">Bắc Ninh</option>
-                                <option value="105.75">Bến Tre</option>
-                                <option value="105.75">Bình Dương</option>
-                                <option value="108.25">Bình Định</option>
-                                <option value="106.25">Bình Phước</option>
-                                <option value="108.50">Bình Thuận</option>
+                                <option value="107.00">Bắc Ninh</option>
                                 <option value="104.50">Cà Mau</option>
                                 <option value="105.75">Cao Bằng</option>
-                                <option value="105.00">Cần Thơ</option>
-                                <option value="107.75">Đà Nẵng</option>
                                 <option value="108.50">Đắk Lắk</option>
-                                <option value="108.50">Đắk Nông</option>
                                 <option value="103.00">Điện Biên</option>
                                 <option value="107.75">Đồng Nai</option>
                                 <option value="105.00">Đồng Tháp</option>
-                                <option value="108.50">Gia Lai</option>
-                                <option value="105.50">Hà Giang</option>
-                                <option value="105.00">Hà Nam</option>
-                                <option value="105.00">Hà Nội</option>
+                                <option value="108.25">Gia Lai</option>
                                 <option value="105.50">Hà Tĩnh</option>
-                                <option value="105.50">Hải Dương</option>
-                                <option value="105.75">Hải Phòng</option>
-                                <option value="105.00">Hậu Giang</option>
-                                <option value="106.00">Hoà Bình</option>
-                                <option value="105.75">Hồ Chí Minh</option>
                                 <option value="105.50">Hưng Yên</option>
-                                <option value="108.25">Khánh Hoà</option>
-                                <option value="104.50">Kiên Giang</option>
-                                <option value="107.50">Kon Tum</option>
-                                <option value="103.00">Lai Châu</option>
+                                <option value="108.25">Khánh Hòa</option>
+                                <option value="104.75">Lai Châu</option>
                                 <option value="107.25">Lạng Sơn</option>
                                 <option value="104.75">Lào Cai</option>
                                 <option value="107.75">Lâm Đồng</option>
-                                <option value="105.75">Long An</option>
-                                <option value="105.50">Nam Định</option>
                                 <option value="104.75">Nghệ An</option>
                                 <option value="105.00">Ninh Bình</option>
-                                <option value="108.25">Ninh Thuận</option>
                                 <option value="104.75">Phú Thọ</option>
-                                <option value="108.50">Phú Yên</option>
-                                <option value="106.00">Quảng Bình</option>
-                                <option value="107.75">Quảng Nam</option>
                                 <option value="108.00">Quảng Ngãi</option>
                                 <option value="107.75">Quảng Ninh</option>
-                                <option value="106.25">Quảng Trị</option>
-                                <option value="105.50">Sóc Trăng</option>
+                                <option value="106.00">Quảng Trị</option>
                                 <option value="104.00">Sơn La</option>
-                                <option value="105.50">Tây Ninh</option>
-                                <option value="105.50">Thái Bình</option>
+                                <option value="105.75">Tây Ninh</option>
                                 <option value="106.50">Thái Nguyên</option>
-                                <option value="105.00">Thanh Hoá</option>
-                                <option value="107.00">Thừa Thiên Huế</option>
-                                <option value="105.75">Tiền Giang</option>
-                                <option value="105.50">Trà Vinh</option>
+                                <option value="105.00">Thanh Hóa</option>
+                                <option value="105.00">Thành phố Cần Thơ</option>
+                                <option value="107.75">Thành phố Đà Nẵng</option>
+                                <option value="105.00">Thành phố Hà Nội</option>
+                                <option value="105.75">Thành phố Hải Phòng</option>
+                                <option value="105.75">Thành phố Hồ Chí Minh</option>
+                                <option value="107.00">Thành phố Huế</option>
                                 <option value="106.00">Tuyên Quang</option>
                                 <option value="105.50">Vĩnh Long</option>
-                                <option value="105.00">Vĩnh Phúc</option>
-                                <option value="104.75">Yên Bái</option>
                             </select>
                             <input type="hidden" id="wgs_meridian" value="">
                         </div>
@@ -826,68 +797,39 @@
                             <select id="vn_province" onchange="updateMeridian('vn')" required>
                                 <option value="">-- Chọn tỉnh/thành phố --</option>
                                 <option value="104.75">An Giang</option>
-                                <option value="107.75">Bà Rịa - Vũng Tàu</option>
-                                <option value="105.00">Bạc Liêu</option>
-                                <option value="107.00">Bắc Giang</option>
-                                <option value="106.50">Bắc Kạn</option>
-                                <option value="105.50">Bắc Ninh</option>
-                                <option value="105.75">Bến Tre</option>
-                                <option value="105.75">Bình Dương</option>
-                                <option value="108.25">Bình Định</option>
-                                <option value="106.25">Bình Phước</option>
-                                <option value="108.50">Bình Thuận</option>
+                                <option value="107.00">Bắc Ninh</option>
                                 <option value="104.50">Cà Mau</option>
                                 <option value="105.75">Cao Bằng</option>
-                                <option value="105.00">Cần Thơ</option>
-                                <option value="107.75">Đà Nẵng</option>
                                 <option value="108.50">Đắk Lắk</option>
-                                <option value="108.50">Đắk Nông</option>
                                 <option value="103.00">Điện Biên</option>
                                 <option value="107.75">Đồng Nai</option>
                                 <option value="105.00">Đồng Tháp</option>
-                                <option value="108.50">Gia Lai</option>
-                                <option value="105.50">Hà Giang</option>
-                                <option value="105.00">Hà Nam</option>
-                                <option value="105.00">Hà Nội</option>
+                                <option value="108.25">Gia Lai</option>
                                 <option value="105.50">Hà Tĩnh</option>
-                                <option value="105.50">Hải Dương</option>
-                                <option value="105.75">Hải Phòng</option>
-                                <option value="105.00">Hậu Giang</option>
-                                <option value="106.00">Hoà Bình</option>
-                                <option value="105.75">Hồ Chí Minh</option>
                                 <option value="105.50">Hưng Yên</option>
-                                <option value="108.25">Khánh Hoà</option>
-                                <option value="104.50">Kiên Giang</option>
-                                <option value="107.50">Kon Tum</option>
-                                <option value="103.00">Lai Châu</option>
+                                <option value="108.25">Khánh Hòa</option>
+                                <option value="104.75">Lai Châu</option>
                                 <option value="107.25">Lạng Sơn</option>
                                 <option value="104.75">Lào Cai</option>
                                 <option value="107.75">Lâm Đồng</option>
-                                <option value="105.75">Long An</option>
-                                <option value="105.50">Nam Định</option>
                                 <option value="104.75">Nghệ An</option>
                                 <option value="105.00">Ninh Bình</option>
-                                <option value="108.25">Ninh Thuận</option>
                                 <option value="104.75">Phú Thọ</option>
-                                <option value="108.50">Phú Yên</option>
-                                <option value="106.00">Quảng Bình</option>
-                                <option value="107.75">Quảng Nam</option>
                                 <option value="108.00">Quảng Ngãi</option>
                                 <option value="107.75">Quảng Ninh</option>
-                                <option value="106.25">Quảng Trị</option>
-                                <option value="105.50">Sóc Trăng</option>
+                                <option value="106.00">Quảng Trị</option>
                                 <option value="104.00">Sơn La</option>
-                                <option value="105.50">Tây Ninh</option>
-                                <option value="105.50">Thái Bình</option>
+                                <option value="105.75">Tây Ninh</option>
                                 <option value="106.50">Thái Nguyên</option>
-                                <option value="105.00">Thanh Hoá</option>
-                                <option value="107.00">Thừa Thiên Huế</option>
-                                <option value="105.75">Tiền Giang</option>
-                                <option value="105.50">Trà Vinh</option>
+                                <option value="105.00">Thanh Hóa</option>
+                                <option value="105.00">Thành phố Cần Thơ</option>
+                                <option value="107.75">Thành phố Đà Nẵng</option>
+                                <option value="105.00">Thành phố Hà Nội</option>
+                                <option value="105.75">Thành phố Hải Phòng</option>
+                                <option value="105.75">Thành phố Hồ Chí Minh</option>
+                                <option value="107.00">Thành phố Huế</option>
                                 <option value="106.00">Tuyên Quang</option>
                                 <option value="105.50">Vĩnh Long</option>
-                                <option value="105.00">Vĩnh Phúc</option>
-                                <option value="104.75">Yên Bái</option>
                             </select>
                             <input type="hidden" id="vn_meridian" value="">
                         </div>
