--- a/bandoso.html
+++ b/bandoso.html
@@ -54,10 +54,7 @@
     <!-- Hộp công cụ ẩn bên phải -->
     <aside id="tools-panel" class="tools-panel">
       <div class="tools-panel-header">
-        <div>
-          <div class="tools-panel-label">CÔNG CỤ</div>
-          <h2 class="tools-panel-title">Công cụ bản đồ</h2>
-        </div>
+        <h2 class="tools-panel-title">Công cụ</h2>
         <button id="tools-panel-close" class="tools-panel-close-btn" title="Đóng">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <line x1="18" y1="6" x2="6" y2="18"></line>
@@ -106,10 +103,6 @@
             <!-- Nhóm Vị trí -->
             <div class="tool-group">
               <div class="tool-group-header">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
-                  <circle cx="12" cy="10" r="3"/>
-                </svg>
                 <span class="tool-group-title">Vị trí</span>
               </div>
               <div class="tool-group-content">
@@ -200,11 +193,6 @@
             <!-- Nhóm Đo lường -->
             <div class="tool-group">
               <div class="tool-group-header">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <line x1="3" y1="3" x2="21" y2="21"/>
-                  <path d="M9 9l3 3-3 3"/>
-                  <path d="M15 15l-3-3 3-3"/>
-                </svg>
                 <span class="tool-group-title">Đo lường</span>
               </div>
               <div class="tool-group-content">
@@ -252,13 +240,6 @@
             <!-- Nhóm Chia sẻ tọa độ -->
             <div class="tool-group">
               <div class="tool-group-header">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <circle cx="18" cy="5" r="3"/>
-                  <circle cx="6" cy="12" r="3"/>
-                  <circle cx="18" cy="19" r="3"/>
-                  <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"/>
-                  <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"/>
-                </svg>
                 <span class="tool-group-title">Chia sẻ tọa độ</span>
               </div>
               <div class="tool-group-content">
