--- a/bandoso.html
+++ b/bandoso.html
@@ -295,6 +295,100 @@
                 </button>
               </div>
             </div>
+
+            <!-- Nhóm Vẽ chú thích -->
+            <div class="tool-group">
+              <div class="tool-group-header">
+                <span class="tool-group-title">Vẽ chú thích</span>
+              </div>
+              <div class="tool-group-content" id="drawing-tools-container">
+                <!-- Công cụ vẽ -->
+                <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 6px; margin-bottom: 12px;">
+                  <button id="draw-freehand-btn" class="tool-btn-mini" title="Vẽ tự do">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <path d="M12 19l7-7 3 3-7 7-3-3z"/>
+                      <path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"/>
+                      <path d="M2 2l7.586 7.586"/>
+                      <circle cx="11" cy="11" r="2"/>
+                    </svg>
+                    <span style="font-size: 0.75rem;">Tự do</span>
+                  </button>
+                  <button id="draw-line-btn" class="tool-btn-mini" title="Vẽ đường thẳng">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <line x1="5" y1="12" x2="19" y2="12"/>
+                    </svg>
+                    <span style="font-size: 0.75rem;">Đường</span>
+                  </button>
+                  <button id="draw-arrow-btn" class="tool-btn-mini" title="Vẽ mũi tên">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <line x1="5" y1="12" x2="19" y2="12"/>
+                      <polyline points="12 5 19 12 12 19"/>
+                    </svg>
+                    <span style="font-size: 0.75rem;">Mũi tên</span>
+                  </button>
+                  <button id="draw-polygon-btn" class="tool-btn-mini" title="Vẽ hình đa giác (click nhiều điểm, double-click để hoàn thành)">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <polygon points="12 2 2 19 12 15 22 19"/>
+                    </svg>
+                    <span style="font-size: 0.75rem;">Đa giác</span>
+                  </button>
+                  <button id="draw-circle-btn" class="tool-btn-mini" title="Vẽ hình tròn">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <circle cx="12" cy="12" r="10"/>
+                    </svg>
+                    <span style="font-size: 0.75rem;">Hình tròn</span>
+                  </button>
+                  <button id="draw-text-btn" class="tool-btn-mini" title="Thêm chú thích text">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <polyline points="4 7 4 4 20 4 20 7"/>
+                      <line x1="9" y1="20" x2="15" y2="20"/>
+                      <line x1="12" y1="4" x2="12" y2="20"/>
+                    </svg>
+                    <span style="font-size: 0.75rem;">Text</span>
+                  </button>
+                </div>
+
+                <!-- Màu sắc và độ dày -->
+                <div style="display: flex; gap: 10px; margin-bottom: 10px; align-items: center;">
+                  <div style="flex: 1;">
+                    <label style="display: block; font-size: 0.8rem; color: #6b7280; margin-bottom: 4px;">Màu sắc</label>
+                    <input type="color" id="drawing-color-picker" value="#FF0000" style="width: 100%; height: 36px; border: 2px solid #e5e7eb; border-radius: 6px; cursor: pointer;">
+                  </div>
+                  <div style="flex: 1;">
+                    <label style="display: block; font-size: 0.8rem; color: #6b7280; margin-bottom: 4px;">
+                      Độ dày <span id="drawing-weight-value" style="font-weight: 600; color: #8b5cf6;">3px</span>
+                    </label>
+                    <input type="range" id="drawing-weight-slider" min="1" max="10" value="3" style="width: 100%;">
+                  </div>
+                </div>
+
+                <!-- Nút hành động -->
+                <div style="display: flex; gap: 6px;">
+                  <button id="drawing-undo-btn" class="tool-btn" style="flex: 1;" title="Hoàn tác (Undo)">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <path d="M3 7v6h6"/>
+                      <path d="M21 17a9 9 0 00-9-9 9 9 0 00-6 2.3L3 13"/>
+                    </svg>
+                    <span>Hoàn tác</span>
+                  </button>
+                  <button id="drawing-clear-btn" class="tool-btn" style="flex: 1;" title="Xóa tất cả">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <polyline points="3 6 5 6 21 6"/>
+                      <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
+                    </svg>
+                    <span>Xóa</span>
+                  </button>
+                  <button id="drawing-export-btn" class="tool-btn" style="flex: 1;" title="Xuất GeoJSON">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                      <polyline points="7 10 12 15 17 10"/>
+                      <line x1="12" y1="15" x2="12" y2="3"/>
+                    </svg>
+                    <span>Xuất</span>
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
