--- a/bandoso.html
+++ b/bandoso.html
@@ -313,9 +313,9 @@
                     </svg>
                     <span style="font-size: 0.75rem;">Tự do</span>
                   </button>
-                  <button id="draw-line-btn" class="tool-btn-mini" title="Vẽ đường thẳng">
+                  <button id="draw-line-btn" class="tool-btn-mini" title="Vẽ đường gấp khúc (click nhiều điểm, double-click để hoàn thành)">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <line x1="5" y1="12" x2="19" y2="12"/>
+                      <polyline points="4 17 8 12 12 17 16 7 20 12"/>
                     </svg>
                     <span style="font-size: 0.75rem;">Đường</span>
                   </button>
@@ -364,27 +364,27 @@
 
                 <!-- Nút hành động -->
                 <div style="display: flex; gap: 6px;">
-                  <button id="drawing-undo-btn" class="tool-btn" style="flex: 1;" title="Hoàn tác (Undo)">
+                  <button id="drawing-undo-btn" class="tool-btn drawing-action-btn" style="flex: 1;" title="Hoàn tác (Undo)">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                       <path d="M3 7v6h6"/>
                       <path d="M21 17a9 9 0 00-9-9 9 9 0 00-6 2.3L3 13"/>
                     </svg>
                     <span>Hoàn tác</span>
                   </button>
-                  <button id="drawing-clear-btn" class="tool-btn" style="flex: 1;" title="Xóa tất cả">
+                  <button id="drawing-clear-btn" class="tool-btn drawing-action-btn" style="flex: 1;" title="Xóa tất cả">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                       <polyline points="3 6 5 6 21 6"/>
                       <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
                     </svg>
                     <span>Xóa</span>
                   </button>
-                  <button id="drawing-export-btn" class="tool-btn" style="flex: 1;" title="Xuất GeoJSON">
+                  <button id="drawing-export-btn" class="tool-btn drawing-action-btn" style="flex: 1;" title="Xuất file KML">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                       <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                       <polyline points="7 10 12 15 17 10"/>
                       <line x1="12" y1="15" x2="12" y2="3"/>
                     </svg>
-                    <span>Xuất</span>
+                    <span>Xuất KML</span>
                   </button>
                 </div>
               </div>
